--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>NEITOR TIENDA</title>
+  <title>NEITOR-TIENDA</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
