--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>NEITOR-TIENDA</title>
+  <title></title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>NEITOR TIENDA</h1>
+    <h1></h1>
   </header>
 
   <main>
