--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
-<!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1></h1>
-  </header>
-
-  <main>
-    <div id="productos" class="grid"></div>
-  </main>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<div class="producto">
+  <div class="carousel">
+    <img src="img/remera1-1.jpg" class="active" alt="Remera negra 1">
+    <img src="img/remera1-2.jpg" alt="Remera negra 2">
+    <img src="img/remera1-3.jpg" alt="Remera negra 3">
+    <button class="prev">‹</button>
+    <button class="next">›</button>
+  </div>
+  <h3>Remera Negra</h3>
+  <p>$8000</p>
+</div>
