--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <p>$8000</p>
 </div>
 
+<!-- ... todo tu contenido de productos ... -->
+
 <script>
 document.querySelectorAll('.carousel').forEach(carousel => {
   let index = 0;
@@ -28,3 +30,6 @@ document.querySelectorAll('.carousel').forEach(carousel => {
   };
 });
 </script>
+
+</body>
+</html>
